Change history
==============

2.2.2 (unreleased)
------------------

- Added German translation.
  [pabo3000]
- Updated icon for content type: Carousel Banner. [taito]


2.2.1 (2013-03-15)
------------------

- Fixed error on hover. [kroman0]


2.2 (2012-12-12)
----------------

- Browser view support for showing and hiding carousel viewlet added. [taito]

- Lazily load carousel images [miohtama]

- Don't display ``<img alt="">`` text on the carousel images as it leads to confusing
  with partially load carousel images [miohtama]

- Added checkbox to enable lazy loading carousel images. [kroman0]

- A checkbox for randomizing the order of shown pictures [miohtama]

- Added Plone 4.3 compatibility [davilima6]


2.1 (2011-09-06)
----------------

- Updated i18n helper script to reflect current translations.
  [yomatters]

- Added Finnish translation.
  [datakurre]

- Allow users with the Site Administrator role to add Carousel banners by default.
  [davisagli]

- Added collective.googleanalytics tracking plugin for tracking banner clicks.
  [yomatters]

- Added Dutch translations.
  [jladage]


2.1b3 (2011-01-19)
------------------

- Changed default banner to use the image URL first and then fall back to the
  uploaded image.
  [yomatters]

- Made Carousel respect folder order of banners.
  [yomatters]

- Fixed animation logic for sliding Carousel.
  [yomatters]

- Made link URL optional.
  [yomatters]

- Added the ability to enter an external image URL instead of
  uploading an image.
  [yomatters]

- Fixed permission bug that affected unpublished Carousel folders.
  [yomatters]

- Fixed Carousel banner lookup so that banner view permissions are respected.
  [yomatters]

- Fixed a bug that affected folders containing an item with the ID 'carousel'
  that was not a Carousel folder.
  [yomatters]

2.1b2 (2010-12-08)
------------------

- Fixed javascript error on Plone 3.
  [yomatters]

2.1b1 (2010-12-06)
------------------

- Fixed known good versions set link.